# manapi-qt-extension

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: ManapiQt.hpp
